--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,9 @@ jobs:
       group: ${{ github.workflow }}-${{ github.ref }}
     steps:
       - uses: actions/checkout@v3
+      
+      - name: Install pandoc
+        run: sudo apt install pandoc
 
       - name: Build
         run: ./build.sh
